# python-practices

./: .coverage  .flake8  README.md  noxfile.py  pyproject.toml
src/python_practices/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
