[tool.poetry]
name = "python-practices"
version = "0.1.0"
authors = ["stannida <stannida@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stannida/python-practices"
repository = "https://github.com/stannida/python-practices"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-practices = "python_practices.console:main"
